<resources>
    <string name="app_name">Mhsacco</string>
    <string name="calendars">Calendars</string>
    <string name="branch_code">Branch Code</string>
    <string name="Reference_number">reference_number</string>
    <string name="Loan_Purpose">Loan_Purpose</string>
    <string name="amount">amount</string>
    <string name="Amount">Amount</string>
    <string name="Date">Date</string>


    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
</resources>
