<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button

            android:layout_width="414dp"
            android:layout_height="60dp"
            android:background="#000035"
            android:drawableLeft="@drawable/saccoo"
            android:drawablePadding="5dp"
            android:text="Accepted Loans"
           android:gravity="left"
            android:layout_gravity="left"
            android:textColor="#ffffff"
            android:textSize="25dp"

             />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/cardview_compat_inset_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textviewead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Reference_number"
                android:textColor="	#0000A0"
                android:textSize="15dp"

                />

            <TextView
                android:id="@+id/textViewHead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Loan_Purpose"
                android:textColor="	#0000A0"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:orientation="horizontal"
            android:textColor="	#0000A0"
            android:textSize="15dp"
            android:textStyle="bold">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Amount"
                android:textColor="	#0000A0"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="#a9a9a9"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Date"
                android:textColor="	#0000A0"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="15dp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>